tools/tests/errors/surf_exc_07.experr
expected at least 4 values to unpack, got 2
